objects/GL_Account__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <summarizedField>GL_Entry__c.Amount__c</summarizedField>
    <summaryForeignKey>GL_Entry__c.GL_Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>