objects/GL_Account__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>