objects/GL_Account__c/fields/No_of_Lines__c.field-meta.xml
<CustomField>
    <fullName>No_of_Lines__c</fullName>
    <label>No. of Lines</label>
    <summaryForeignKey>GL_Entry__c.GL_Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>