objects/GL_Account__c/validationRules/UniqueNameCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>UniqueNameCheck</fullName>
    <active>true</active>
    <errorConditionFormula>AND(VLOOKUP($ObjectType.GL_Account__c.Fields.Name, $ObjectType.GL_Account__c.Fields.Name, Name) = Name, OR(ISNEW(), ISCHANGED(Name)))</errorConditionFormula>
    <errorMessage>GL Account No. must be unique!</errorMessage>
</ValidationRule>