objects/GL_Account__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Amount__c</columns>
    <columns>No_of_Lines__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>